# hlminiaudio

./: .gitignore  .gitmodules  CMakePresets.json  README.md  extraParams.hxml  haxelib.json
.github/workflows/: build.yml
extension/: CMakeLists.txt  extension.c  extension.cpp  extension_js.c
heaps_override/hxd/res/: Config.hx
src/hxd/snd/miniaudio/: AudioTypes.hx  Driver.hx
src/miniaudio/: Miniaudio.hl.hx  Miniaudio.hx  Miniaudio.js.hx
src/miniaudio/heaps/: AudioBuffer.hx  AudioData.hx  Macro.hx
test/: Test.hx  TestHeaps.hx  test-heaps.hl  test-heaps.hxml  test-hl.hxml  test.hl
test/audio/: test.flac
tests/: test-heaps.bat
tests/testMain/: test-heaps.hxml  test-hl.hxml
tests/testMain/audio/formats/: test.aiff
tests/testMain/src/: Test.hx  TestHeaps.hx  TestSupport.hx
